- Fixed a bug where if set::help-channel was missing it was reported twice.
- Made modules able to have configuration directives in conf3. The system to do this is 
  completely new and works differently. All remnants of the old system have been removed.
- Changed the module config system slightly to be able to detect more errors.
- /rehash for conf3 (that works) :)
- Fixed win32 compile error with default: ;
- Fixed several conf3 errors
- Converted deny {} to conf3, in the process added some extra crule functions to help
  report errors better
- Fixed sendto_ routines to use slot number as index into sentalong array
- Fixed a conf3 bug
- Made alias {}'s get rehashed
- Made modules correctly rehash, this involves adding a Mod_Test function to modules that
  need to perform configuration tests. This is currently only implimented for dynamic linking
- Made the same system work under static linking. This (barring any bugs) should be the
  completion of conf3. :)
- Fixed a bug where chmode +q users could not kick chmode +a users. (#0000459) reported by
  jollino.
- Fixed serious bug in /who that caused the server to lock up (there's a ID
  for this, could someone find it). Beta13 SHOULD be a LOT nearer now
- Small typo in config validation found by ins4ne
- Changed the way return values work in conf3 to better report the number of errors that
  occurred.
- Cleaned up some module code, also removed /module load|unload (just use /rehash)
- Removed makeconf
- Fixed errors in doc/example.conf and makenet
- Fixed set::scan::bind-ip and set::scan::ban-time typos in unreal32docs.html
- Changed set::scan:ban-time to set::scan::bantime and added set::scan::timeout in 
  unreal32docs.html
- Fixed some logical module rehash issues
- Made config actually add listeners when rehashing (...) also you can now
  change listener flags using /rehash
- Changed .SICI to point to cacert.org instead (patch by evilbunny)
- Fixed an oper count bug with SVS2MODE reported by confused (#0000490)