@@ -42,10 +42,10 @@ MOD_FILES=SRC/L_COMMANDS.OBJ SRC/M_CHGHOST.OBJ SRC/M_SDESC.OBJ SRC/M_SETIDENT.OB
  SRC/M_SVSNLINE.OBJ SRC/M_WHO.OBJ SRC/M_SWHOIS.OBJ SRC/M_SVSMODE.OBJ \
  SRC/M_AWAY.OBJ SRC/M_SVSNOOP.OBJ SRC/M_MKPASSWD.OBJ SRC/M_SVSO.OBJ SRC/M_SVSNICK.OBJ \
  SRC/M_ADMINCHAT.OBJ SRC/M_AKILL.OBJ SRC/M_CHGNAME.OBJ SRC/M_GUEST.OBJ SRC/M_HTM.OBJ \
- SRC/M_KLINE.OBJ SRC/M_LAG.OBJ SRC/M_MESSAGE.OBJ SRC/M_NACHAT.OBJ SRC/M_OPER.OBJ \
+ SRC/M_LAG.OBJ SRC/M_MESSAGE.OBJ SRC/M_NACHAT.OBJ SRC/M_OPER.OBJ \
  SRC/M_PINGPONG.OBJ SRC/M_QUIT.OBJ SRC/M_RAKILL.OBJ SRC/M_RPING.OBJ SRC/M_SENDUMODE.OBJ \
  SRC/M_SQLINE.OBJ SRC/M_KILL.OBJ SRC/M_TSCTL.OBJ SRC/M_UNKLINE.OBJ \
- SRC/M_UNSQLINE.OBJ SRC/M_UNZLINE.OBJ SRC/M_WHOIS.OBJ SRC/M_ZLINE.OBJ \
+ SRC/M_UNSQLINE.OBJ SRC/M_UNZLINE.OBJ SRC/M_WHOIS.OBJ \
  SRC/SCAN.OBJ SRC/SCAN_SOCKS.OBJ SRC/SCAN_HTTP.OBJ SRC/M_TKL.OBJ SRC/M_VHOST.OBJ \
  SRC/M_CYCLE.OBJ SRC/M_SVSJOIN.OBJ SRC/M_SVSPART.OBJ SRC/M_SVSLUSERS.OBJ \
  SRC/INVISIBILITY.OBJ
@@ -303,9 +303,6 @@ src/m_htm.obj: src/modules/m_htm.c $(INCLUDES)
 src/m_kill.obj: src/modules/m_kill.c $(INCLUDES)
 	$(CC) $(CFLAGS) src/modules/m_kill.c
 
-src/m_kline.obj: src/modules/m_kline.c $(INCLUDES)
-	$(CC) $(CFLAGS) src/modules/m_kline.c
-
 src/m_lag.obj: src/modules/m_lag.c $(INCLUDES)
 	$(CC) $(CFLAGS) src/modules/m_lag.c
 
@@ -350,9 +347,6 @@ src/m_unzline.obj: src/modules/m_unzline.c $(INCLUDES)
 
 src/m_whois.obj: src/modules/m_whois.c $(INCLUDES)
 	$(CC) $(CFLAGS) src/modules/m_whois.c
-
-src/m_zline.obj: src/modules/m_zline.c $(INCLUDES)
-	$(CC) $(CFLAGS) src/modules/m_zline.c
 
 src/m_vhost.obj: src/modules/m_vhost.c $(INCLUDES)
         $(CC) $(CFLAGS) src/modules/m_vhost.c
